test/Parser/Namespace/RCurlyBracketTerminatingGlobalNamespace.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:5:1: error: expected 'END'; got 'RCURLYBRACKET'
}

// CHECK: 1 error generated.
